# backtrader-test

./: README.md  pyproject.toml
src/backtrader_test/: main.py
