[tool.poetry]
name = "backtrader-test"
version = "0.1.0"
description = ""
authors = ["alpal <spring_special_0f@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
backtrader = "^1.9.78.123"
pandas = "^2.1.1"
lxml = "^5.1.0"
matplotlib = "^3.8.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
